# flexfetch

./: AGENTS.md  Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
.superpowers/brainstorm/: .last-token
.superpowers/sdd/: progress.md  task-1-brief.md  task-1-report.md  task-1-review-package.diff  task-2-brief.md  task-2-report.md  task-2-review-package.diff  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  task-6-brief.md
flexfetch-cli/: Cargo.toml
flexfetch-cli/src/: main.rs
flexfetch-core/: Cargo.toml  create_logos.py
flexfetch-core/src/: cache.rs  config.rs  context.rs  export.rs  image_logo.rs  lib.rs  logo.rs  module_registry.rs  template.rs  theme.rs
flexfetch-core/src/modules/: battery.rs  colors.rs  cpu.rs  custom.rs  de.rs  disk.rs  gpu.rs  kernel.rs  locale.rs  memory.rs  mod.rs  network.rs  packages.rs  processes.rs  resolution.rs  shell.rs  terminal.rs  title.rs  wm.rs
flexfetch-core/tests/: integration_tests.rs  logo_test.rs  logo_tests.rs  template_tests.rs
flexfetch-lua/: Cargo.toml
flexfetch-lua/src/: lib.rs
sysfetch-cli/: Cargo.toml
sysfetch-core/: Cargo.toml
sysfetch-core/src/: cache.rs  config.rs  context.rs  error.rs  lib.rs  module.rs  module_registry.rs  template.rs
sysfetch-core/src/modules/: battery.rs  colors.rs  cpu.rs  custom.rs  de.rs  disk.rs  gpu.rs  host.rs  kernel.rs  locale.rs  memory.rs  mod.rs  network.rs  os.rs  packages.rs  processes.rs  shell.rs  terminal.rs  uptime.rs  wm.rs
sysfetch-lua/: Cargo.toml
templates/: default.tera
(+22 files in other folders)
