[package]
name = "sysfetch-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tera = "1"
rayon = "1"
mlua = { version = "0.10", optional = true, features = ["lua54"] }
chrono = "0.4"
walkdir = "2"

[features]
default = []
lua = ["dep:mlua"]
